--- a/views/home.html
+++ b/views/home.html
@@ -9,13 +9,23 @@
     <div id="about" class="sec1 sec">
       <h1 class="titles">About</h1>
       <div class="aboutcon">
-      <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
-      <!-- <h1><hr></h1> -->
-      <p><a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md"></a><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
-      <!-- <h1><hr></h1> -->
-      <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
+        <div id="leftabout" class="about_div">
+          <a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md" class="cuttingboard"></a>
+          <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard">
+        </div>
+        <div id="centerabout" class="about_div">
+          <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
+          <!-- <h1><hr></h1> -->
+          <p><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
+          <!-- <h1><hr></h1> -->
+          <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
 
-      <p>Food lover with who loves to cook at home<a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
+          <p>Food lover with who loves to cook at home<a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
+        </div>
+        <div id="rightabout" class="about_div">
+          <img src="./styles/imgs/subarurally.jpg" class="subarurally rightimgs">
+          <img src="./styles/imgs/pasta.jpg" style="" class="pasta rightimgs">
+        </div>
       </div>
     </div>
     <div id="skills" class="sec2 sec">
