--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -2,6 +2,7 @@
   html {
     height: 2000px;
     width: 100%;
+    color: black
   }
   body {
     margin: 0;
@@ -11,21 +12,21 @@
   header {
     height: 65px;
     width: 100%;
-    background-color: #222222;
+    background-color: white;
     position: fixed;
     z-index: 1;
-    border-bottom: .5px solid white;
+    border-bottom: 1px solid black;
     color: none;
   }
 
   a:hover {
-    color: white;
+    color: grey;
     background-color: none;
   }
 
   .navbar-inverse {
-      background-color: #404040;
-      border-color: #080808;
+      background-color: white;
+      border-color: black;
   }
 
   .homecon {
@@ -53,7 +54,7 @@
     position: absolute;
     display: block;
     left: 0px;
-    border-right: solid 1px white;
+    border-right: solid 1px black;
   }
 
   .home h1 {
@@ -61,11 +62,10 @@
     width: 50px;
     margin: 11px;
     position: relative;
-    font-family: sans-serif;
+    font-family: inherit;
     font-size: 16px;
     font-weight: bold;
-    /*border: 1px solid white;*/
-    color: white;
+    color: black;
     transition: color 2s
   }
 
@@ -97,10 +97,10 @@
     height: auto;
     width: auto;
     margin: auto;
-    font-family: sans-serif;
+    font-family: inherit;
     font-size: 12px;
     font-weight: bold;
-    color: white;
+    color: black;
     text-align: center;
     transition: color 2s;
     right: 0
@@ -135,6 +135,7 @@
     flex-direction: column;
     position: relative;
     margin: auto;
+    color: white;
     background-color: none;
     border-radius: 0;
     opacity: .9;
@@ -144,25 +145,68 @@
   #about {
     height: 100vh;
     width: 100%;
-    background-color: #222222;
+    background-color: white;
     display: flex;
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid white;
+    border-top: 2px solid black;
     text-align: center;
   }
 
   .aboutcon {
-    height: 200px;
-    /*border: 1px solid white;*/
-    background: #222222;
-    font-size: 18px;
+    height: 90%;
+    width: 100%;
+    font-size: 20px;
+    margin: auto;
+    text-align: center;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    vertical-align: middle;
+  }
+
+  .about_div {
+    height: 100%;
+    width: 100%;
+    font-size: 20px;
+    border: black solid 2px;
+    margin: auto;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     vertical-align: middle;
+  }
+
+  #rightabout {
+    display: none;
+    flex-direction: column;
+  }
+
+  #leftabout {
+    display: none;
+    flex-direction: column;
+  }
+
+  .cuttingboard {
+    height: auto;
+    width: 100%
+  }
+
+  .subarurally {
+    height: auto;
+    width: 100%;
+  }
+
+  .pasta {
+    height: auto;
+    width: 80%;
+  }
+
+  .rightimgs {
+    margin: auto;
   }
 
   .aboutcon p {
@@ -171,6 +215,7 @@
     top: -10px;
     margin: auto;
     position: relative;
+    color: black;
     text-align: center;
   }
 
@@ -193,8 +238,8 @@
   #skills {
     height: 100vh;
     width: 100%;
-    background-color: #222222;
-    color: white;
+    background-color: white;
+    color: black;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -209,17 +254,18 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: #222222;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid black;
     opacity: .9;
     justify-content: center;
+    color: black;
   }
 
   .skillsbox ul {
     height: auto;
     width: auto;
     display: flex;
-    color: white;
+    color: black;
     flex-direction: row;
     margin: 20px 20px;
   }
@@ -239,6 +285,7 @@
   i {
     font-size: 50px;
     margin: auto;
+    color: black;
   }
 
   i:hover {
@@ -251,7 +298,7 @@
     width: 100%;
     position: relative;
     display: flex;
-    background-color: #222222;
+    background-color: white;
     flex-direction: column;
     background-attachment: fixed;
   }
@@ -300,7 +347,7 @@
     position: relative;
     justify-content: center;
     border-radius: 0 0 0 0;
-    background-color: #222222;
+    background-color: white;
   }
 
   .pronam {
@@ -319,7 +366,7 @@
     flex-direction: column;
     opacity: .9;
     border-radius: none;
-    color: white;
+    color: black;
     position: relative;
   }
 
@@ -368,7 +415,7 @@
     height: 100vh;
     width: 100%;
     position: relative;
-    background-color: #222222;
+    background-color: white;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -391,11 +438,11 @@
   }
 
   .contcon a {
-    color: white
+    color: black
   }
 
   .contcon a:hover {
-    color: white
+    color: black
   }
 
   .det {
@@ -404,7 +451,7 @@
   }
   .sec {
     /*border-bottom: 2px solid white;*/
-    color: white;
+    color: black;
   }
 
   #linkedin {
