--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@
     height: 2000px;
     width: 100%;
     font-family: JosifinSans-Regular;
+    color: black;
   }
 
   body {
@@ -28,11 +29,11 @@
   header {
     height: 65px;
     width: 100%;
-    background-color: #222222;
+    background-color: white;
     position: fixed;
     z-index: 1;
-    border-bottom: .5px solid white;
-    color: none;
+    border-bottom: .5px solid black;
+    color: black;
     /*opacity: 0;*/
   }
 
@@ -52,12 +53,12 @@
   }
 
   a:hover {
-    color: white;
+    color: black;
     background-color: none;
   }
 
   .navbar-inverse {
-      background-color: #404040;
+      background-color: white;
       border-color: #080808;
   }
 
@@ -70,7 +71,7 @@
     font-size: 50px;
     text-align: center;
     display: table-cell;
-    color: white;
+    color: black;
     vertical-align: middle;
   }
 
@@ -91,7 +92,7 @@
     font-size: 16px;
     font-weight: bold;
     text-align: center;
-    color: white;
+    color: black;
     transition: color 2s
   }
 
@@ -126,8 +127,8 @@
     margin: auto;
     font-family: JosifinSans-Regular;
     font-size: 16px;
-    font-weight: bold;
-    color: white;
+    /*font-weight: bold;*/
+    color: black;
     text-align: center;
     transition: color 2s
   }
@@ -161,7 +162,7 @@
     flex-direction: column;
     position: relative;
     margin: auto;
-    background-color: none;
+    color: white;
     border-radius: 0;
     opacity: .9;
     text-align: center;
@@ -174,27 +175,58 @@
   #about {
     height: 100vh;
     width: 100%;
-    background-color: #222222;
-    color: white;
+    background-color: white;
+    color: black;
     display: flex;
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
+    border-top: 2px solid black;
     text-align: center;
   }
 
   .aboutcon {
-    height: auto;
-    width: 33%;
+    height: 90%;
+    width: 100%;
     font-size: 20px;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    vertical-align: middle;
+  }
+
+  .about_div {
+    height: 100%;
+    width: 30%;
+    font-size: 20px;
+    /*border: black solid 2px;*/
     margin: auto;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     vertical-align: middle;
+  }
+
+  .cuttingboard {
+    height: auto;
+    width: 100%
+  }
+
+  .subarurally {
+    height: auto;
+    width: 100%;
+  }
+
+  .pasta {
+    height: auto;
+    width: 80%;
+  }
+
+  .rightimgs {
+    margin: auto;
   }
 
   .aboutcon p {
@@ -207,32 +239,37 @@
     text-overflow: ellipsis;
   }
 
+  #rightabout {
+    display: flex;
+    flex-direction: column;
+  }
+
   .devicon-gulp-plain {
     text-decoration: none;
   }
 
   .md {
-    height: 30px;
-    width: 40px;
+    height: auto;
+    width: 100%;
   }
-
+/*
   .md:hover {
     height: 33.5px;
     width: 45px;
     transition: font-size;
     transition-duration: .5s;
-  }
+  }*/
 
   #skills {
     height: 625px;
     width: 100%;
-    background-color: #222222;
+    background-color: white;
     color: black;
     background-size: cover;
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
-    border-bottom: 2px solid #222
+    /*border-bottom: 2px solid #222*/
   }
 
   .skillsbox {
@@ -242,8 +279,8 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: #222222;
-    border: 2px solid white;
+    background-color: white;
+    border: 2px solid black;
     opacity: .9;
     justify-content: center;
   }
@@ -252,7 +289,7 @@
     height: auto;
     width: auto;
     display: flex;
-    color: white;
+    color: black;
     flex-direction: row;
     margin: 25px 25px;
   }
@@ -272,6 +309,7 @@
   i {
     font-size: 75px;
     margin: auto;
+    color: black
   }
 
   i:hover {
@@ -283,7 +321,7 @@
     height: 700px;
     width: 100%;
     position: relative;
-    background-color: #222222;
+    background-color: white;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -334,17 +372,17 @@
 
   .pronam {
     font-size: 25px;
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     padding: 20px;
-    background-color: #222222;
+    background-color: white;
     transition-property: all;
     transition-duration: 1s;
-    color: white
+    color: black
   }
 
   .pronam:hover {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
   }
 
   .project {
@@ -355,7 +393,7 @@
     /*border: 2px solid white;*/
     /*background-color: black;*/
     opacity: .9;
-    color: white;
+    color: black;
     position: relative;
   }
 
@@ -368,7 +406,7 @@
   }
 
   .project h1 {
-    border: 2px solid white;
+    /*border: 2px solid black;*/
     padding: 10px;
   }
 
@@ -378,7 +416,7 @@
     margin: auto;
     background-size: 100%;
     background: cover;
-    box-shadow: 5px 2px 2px  white;
+    box-shadow: 5px 2px 2px  black;
   }
 
   .projcover {
@@ -417,13 +455,13 @@
     height: 80vh;
     width: 100%;
     position: relative;
-    background-color: #222222;
+    background-color: white;
     background-size: cover;
     display: flex;
     font-family: JosifinSans-Regular;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid white;
+    border-top: 2px solid black;
   }
 
   .contcon {
@@ -434,18 +472,18 @@
     display: flex;
     flex-direction: row;
     background-color: none;
-    border: white 2px solid;
+    border: black 2px solid;
     opacity: .9;
     justify-content: center;
-    color: white
+    color: black
   }
 
   .contcon a {
-    color: white
+    color: black
   }
 
   .contcon a:hover {
-    color: white
+    color: black
   }
   .det {
     margin: auto;
@@ -453,7 +491,7 @@
   }
   .sec {
     /*border-bottom: 2px solid white;*/
-    color: white;
+    color: black;
   }
 
   #linkedin {
