--- a/views/home.html
+++ b/views/home.html
@@ -92,6 +92,17 @@
           </a>
           <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
         </div>
+        <div id="drumkitpro" class="project">
+          <a href="https://sbrycebarker.github.io/DRUM-KIT/">
+            <div id="drumkit" class="projimg">
+              <!-- <img src="./styles/imgs/metal_music.png"> -->
+              <div class="projcover">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
+        </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
