--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -337,6 +337,12 @@
     background-position: center;
   }
 
+  #drumkit {
+    background-image: url("./imgs/drumkit.png");
+    background-size: cover;
+    background-position: center;
+  }
+
   .projcon {
     height: 90%;
     width: 100%;
