--- a/views/home.html
+++ b/views/home.html
@@ -103,6 +103,17 @@
           </a>
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
         </div>
+        <div id="clockpro" class="project">
+          <a href="https://sbrycebarker.github.io/CLOCK/">
+            <div id="clock" class="projimg">
+              <!-- <img src="./styles/imgs/metal_music.png"> -->
+              <div class="projcover">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
+        </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
