--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -150,7 +150,7 @@
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid black;
+    /* border-top: 2px solid black; */
     text-align: center;
   }
 
@@ -165,13 +165,13 @@
     flex-direction: column;
     justify-content: center;
     vertical-align: middle;
+    border-bottom: 2px solid black;
   }
 
   .about_div {
     height: 100%;
     width: 100%;
     font-size: 20px;
-    border: black solid 2px;
     margin: auto;
     text-align: center;
     display: flex;
@@ -255,7 +255,7 @@
     display: flex;
     flex-wrap: wrap;
     background-color: white;
-    border: 1px solid black;
+    border: 2px solid black;
     opacity: .9;
     justify-content: center;
     color: black;
@@ -343,6 +343,13 @@
     background-position: center;
   }
 
+  #clock {
+    background-image: url("./imgs/clock.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
     height: 90%;
     width: 100%;
@@ -418,7 +425,7 @@
   }
 
   #contact {
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     position: relative;
     background-color: white;
@@ -426,13 +433,14 @@
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
+    border-top: 2px solid black;
   }
 
   .contcon {
     height: auto;
-    width: 100%;
+    width: auto;
     top: 25px;
-    padding: 50px;
+    padding: 25px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -440,7 +448,7 @@
     border-radius: 15px;
     opacity: .9;
     justify-content: center;
-    border: none;
+    border: 2px solid black;
   }
 
   .contcon a {
