--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,7 +318,7 @@
   }
 
   #projects {
-    height: 700px;
+    height: auto;
     width: 100%;
     position: relative;
     background-color: white;
@@ -326,11 +326,13 @@
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
+    border-top: 2px solid black
   }
 
   #projects h1 {
-    margin: auto;
+    margin: 100px auto;
   }
+
   #starpro {
     /*border-radius: 15px 15px 0 0;*/
   }
@@ -367,19 +369,27 @@
     background-position: center;
   }
 
+  #clock {
+    background-image: url("./imgs/clock.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
-    height: 50vh;
+    height: auto;
     width: 90%;
-    margin: auto;
+    margin: 100px auto;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     position: relative;
-    /*border-radius: 15px;*/
+    /* border: 2px solid black; */
   }
 
   .pronam {
     font-size: 25px;
-    /*border: 2px solid white;*/
+    border: 2px solid black;
     padding: 20px;
     background-color: white;
     transition-property: all;
