--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -370,6 +370,13 @@
     background-position: center;
   }
 
+  #performpro {
+    background-image: url("./imgs/barkerperformance.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .projcon {
     height: auto;
     width: 90%;
