--- a/views/home.html
+++ b/views/home.html
@@ -114,6 +114,17 @@
           </a>
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
         </div>
+        <div id="performpro" class="project">
+          <a href="http://138.68.60.37:8085/#!/">
+            <div id="perform" class="projimg">
+              <!-- <img src="./styles/imgs/metal_music.png"> -->
+              <div class="projcover">
+                <h1 class="go2">In Progress</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/">Barker Performance</a></h1>
+        </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
