--- a/views/home.html
+++ b/views/home.html
@@ -49,8 +49,8 @@
     </div>
     <div id="projects" class="sec3 sec">
       <h1 class="titles">Projects</h1>
-      <div class="projcon">
-        <div id="starpro" class="project">
+      <div class="projcon multiple-items" data-slick='{"slidesToShow": 3, "slidesToScroll": 3}'>
+        <div id="starpro" class="project item">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
             <div id="starwars" class="projimg">
               <div class="projcover starcov">
@@ -60,7 +60,7 @@
           </a>
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
         </div>
-        <div id="subpro" class="project">
+        <div id="subpro" class="project item">
           <a href="http://barkersubaru.com">
             <div id="subaru" class="projimg">
               <div class="projcover">
@@ -70,7 +70,7 @@
           </a>
           <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
         </div>
-        <div id="rockpro" class="project">
+        <div id="rockpro" class="project item">
           <a href="http://rockshowz.info">
             <div id="rockshowZ" class="projimg">
               <!-- <img src="./styles/imgs/metal_music.png"> -->
@@ -81,7 +81,7 @@
           </a>
           <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
         </div>
-        <div id="todopro" class="project">
+        <div id="todopro" class="project item">
           <a href="http://138.68.60.37:8084/#!/">
             <div id="todoapp" class="projimg">
               <!-- <img src="./styles/imgs/metal_music.png"> -->
@@ -92,7 +92,7 @@
           </a>
           <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
         </div>
-        <div id="drumkitpro" class="project">
+        <div id="drumkitpro" class="project item">
           <a href="https://sbrycebarker.github.io/DRUM-KIT/">
             <div id="drumkit" class="projimg">
               <!-- <img src="./styles/imgs/metal_music.png"> -->
@@ -103,7 +103,7 @@
           </a>
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
         </div>
-        <div id="clockpro" class="project">
+        <div id="clockpro" class="project item">
           <a href="https://sbrycebarker.github.io/CLOCK/">
             <div id="clock" class="projimg">
               <!-- <img src="./styles/imgs/metal_music.png"> -->
@@ -114,7 +114,7 @@
           </a>
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
         </div>
-        <div id="performpro" class="project">
+        <div id="performpro" class="project item">
           <a href="http://138.68.60.37:8085/#!/">
             <div id="perform" class="projimg">
               <!-- <img src="./styles/imgs/metal_music.png"> -->
