--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -107,6 +107,13 @@
     text-align: center;
   }
 
+  .headeritem:hover {
+    color: #3273C5;
+    transform: rotateY(380deg);
+    transition-duration: 1s;
+    margin: auto;
+  }
+
   .headeritem h2 {
     height: auto;
     width: auto;
@@ -471,7 +478,7 @@
     height: 100vh;
     width: 100%;
     position: relative;
-    background-color: white;
+    background-color: #333333;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -489,12 +496,12 @@
     background-color: none;
     opacity: .9;
     justify-content: center;
-    color: black;
-    border: 2px solid black;
+    color: inherit;
+    border: 2px solid white;
   }
 
   .contcon a {
-    color: black
+    color: white
   }
 
   .contcon a:hover {
