--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -150,7 +150,7 @@
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
-    /* border-top: 2px solid black; */
+    border-bottom: 2px solid black;
     text-align: center;
   }
 
