--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,6 +189,7 @@
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
+    border-bottom: 2px solid black;
     border-top: 2px solid black;
     text-align: center;
   }
