--- a/views/home.html
+++ b/views/home.html
@@ -10,21 +10,17 @@
       <h1 class="titles">About</h1>
       <div class="aboutcon">
         <div id="leftabout" class="about_div">
-          <a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md" class="cuttingboard"></a>
-          <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard">
+          <h1>I am a full-stack javascript developer, living in Provo Ut.<br>
+          I love cars cooking and gaming and am ready to get to work</h1>
+          <!-- <a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md" class="cuttingboard"></a> -->
+          <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
         <div id="centerabout" class="about_div">
-          <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
-          <!-- <h1><hr></h1> -->
-          <p><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
-          <!-- <h1><hr></h1> -->
-          <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
 
-          <p>Food lover with who loves to cook at home<a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
         </div>
         <div id="rightabout" class="about_div">
-          <img src="./styles/imgs/subarurally.jpg" class="subarurally rightimgs">
-          <img src="./styles/imgs/pasta.jpg" style="" class="pasta rightimgs">
+          <!-- <img src="./styles/imgs/subarurally.jpg" class="subarurally rightimgs"> -->
+          <img src="./styles/imgs/sergio.jpg" style="" class="sergio rightimgs">
         </div>
       </div>
     </div>
