--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,8 @@
           <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
         <div id="centerabout" class="about_div">
-
+          <!-- <h1>I am a full-stack javascript developer, living in Provo Ut.<br>
+          I love cars cooking and gaming and am ready to get to work</h1> -->
         </div>
         <div id="rightabout" class="about_div">
           <!-- <img src="./styles/imgs/subarurally.jpg" class="subarurally rightimgs"> -->
