--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -379,7 +379,7 @@
     background-position: center;
   }
 
-  #performpro {
+  #perform {
     background-image: url("./imgs/barkerperformance.png");
     background-size: cover;
     background-repeat: no-repeat;
