--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -161,6 +161,7 @@
     flex-direction: column;
     position: relative;
     margin: auto;
+    color: white;
     background-color: none;
     border-radius: 0;
     opacity: .9;
