--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -240,7 +240,7 @@
   .sergio {
     height: 300px;
     border-radius: 50%;
-    border: 3px solid black;
+    border: 2px solid black;
   }
 
   .rightimgs {
@@ -268,6 +268,7 @@
     width: 100%;
     background-color: white;
     color: black;
+    background: url(imgs/forest.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
