--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -467,8 +467,8 @@
   .contcon {
     height: auto;
     width: auto;
-    top: 25px;
-    padding: 20px;
+    top: 20px;
+    padding: 15px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -477,6 +477,12 @@
     opacity: .9;
     justify-content: center;
     border: 2px solid white;
+    font-size: 14px;
+  }
+
+  .contcon h2 {
+    font-size: 25px;
+    margin: 5px auto;
   }
 
   .contcon a {
