and more mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -183,14 +183,22 @@
 
   #leftabout {
     display: flex;
-    height: 300px;
+    height: 200px;
     flex-direction: column;
   }
 
+  #leftabout h1 {
+    font-size: 30px;
+  }
+
   #centerabout {
-    display: none;
-    height: 300px;
+    display: flex;
+    height: 75px;
     flex-direction: column;
+  }
+
+  #centerabout h1 {
+    font-size: 25px;
   }
 
   #rightabout {
