--- a/views/home.html
+++ b/views/home.html
@@ -9,6 +9,10 @@
     <div id="about" class="sec1 sec">
       <h1 class="titles">About</h1>
       <div class="aboutcon">
+        <div id="rightabout" class="about_div">
+          <!-- <img src="./styles/imgs/subarurally.jpg" class="subarurally rightimgs"> -->
+          <img src="./styles/imgs/sergio.jpg" style="" class="sergio rightimgs">
+        </div>
         <div id="leftabout" class="about_div">
           <h1>I am a full-stack javascript developer, living in Provo Ut.<br>
           I love cars cooking and gaming and am ready to get to work</h1>
@@ -16,12 +20,9 @@
           <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
         <div id="centerabout" class="about_div">
-          <!-- <h1>I am a full-stack javascript developer, living in Provo Ut.<br>
-          I love cars cooking and gaming and am ready to get to work</h1> -->
-        </div>
-        <div id="rightabout" class="about_div">
-          <!-- <img src="./styles/imgs/subarurally.jpg" class="subarurally rightimgs"> -->
-          <img src="./styles/imgs/sergio.jpg" style="" class="sergio rightimgs">
+          <a href="styles/imgs/Web Dev Res.docx.pdf" download>
+            <h1>My Resume</h1>
+          </a>
         </div>
       </div>
     </div>
