--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
           <!-- <img src="./styles/imgs/cutting_board.jpg" class="cuttingboard"> -->
         </div>
         <div id="centerabout" class="about_div">
-          <a href="styles/imgs/Web Dev Res.docx.pdf" download>
+          <a href="styles/imgs/Sergiobarkerres.docx.pdf" download>
             <h1>My Resume</h1>
           </a>
         </div>
