--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,8 @@
         </div>
       </div>
     </div>
-    <div id="skills" class="sec2 sec">
+    <div id="skills" class="sec2 sec parallax-window" data-parallax="scroll" data-image-src="./styles/imgs/codeback.jpeg">
+      <!-- <img id="skillimg"> -->
       <h1 class="titles">SKILLS</h1>
       <div class="skillsbox">
           <ul><a href="https://angularjs.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
