--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -268,7 +268,7 @@
     width: 100%;
     background-color: white;
     color: black;
-    background: url(imgs/forest.jpg);
+    background: url('imgs/codeback.jpeg');
     background-size: cover;
     display: flex;
     flex-direction: column;
