--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -265,8 +265,8 @@
     color: black;
     background-size: contain;
     display: flex;
-    background: url(imgs/timp1.jpg);
-    background-position: center;
+    background: url('imgs/codeback.jpeg');
+    background-size: cover;
     flex-direction: column;
     background-attachment: fixed;
     border-bottom: 2px solid #222;
