--- a/views/home.html
+++ b/views/home.html
@@ -27,7 +27,6 @@
       </div>
     </div>
     <div id="skills" class="sec2 sec parallax-window" data-parallax="scroll" data-image-src="./styles/imgs/codeback.jpeg">
-      <!-- <img id="skillimg"> -->
       <h1 class="titles">SKILLS</h1>
       <div class="skillsbox">
           <ul><a href="https://angularjs.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
@@ -48,18 +47,24 @@
     </div>
     <div id="projects" class="sec3 sec">
       <h1 class="titles">Projects</h1>
-      <div class="projcon multiple-items" data-slick='{"slidesToShow": 3, "slidesToScroll": 3}'>
+      <div class="projcon multiple-items">
         <div id="starpro" class="project item">
-          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
-            <div id="starwars" class="projimg">
-              <div class="projcover starcov">
-                <h1 class="go2">GO TO PROJECT</h1>
+          <div class="left piece">
+            <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
+              <div id="starwars" class="projimg">
+                <div class="projcover starcov">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
               </div>
-            </div>
-          </a>
-          <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
+            </a>
+          </div>
+          <div class="right piece">
+            <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+          </div>
         </div>
         <div id="subpro" class="project item">
+          <div class="left piece">
           <a href="http://barkersubaru.com">
             <div id="subaru" class="projimg">
               <div class="projcover">
@@ -67,62 +72,86 @@
               </div>
             </div>
           </a>
-          <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
+        </div>
+        <div class="right piece">
+            <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+        </div>
         </div>
         <div id="rockpro" class="project item">
-          <a href="http://rockshowz.info">
-            <div id="rockshowZ" class="projimg">
-              <!-- <img src="./styles/imgs/metal_music.png"> -->
-              <div class="projcover rockcov">
-                <h1 class="go2">GO TO PROJECT</h1>
+          <div class="left piece">
+            <a href="http://rockshowz.info">
+              <div id="rockshowZ" class="projimg">
+                <div class="projcover rockcov">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
               </div>
-            </div>
-          </a>
-          <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
+            </a>
+          </div>
+          <div class="right piece">
+            <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+          </div>
         </div>
         <div id="todopro" class="project item">
-          <a href="http://138.68.60.37:8084/#!/">
-            <div id="todoapp" class="projimg">
-              <!-- <img src="./styles/imgs/metal_music.png"> -->
-              <div class="projcover rockcov">
-                <h1 class="go2">GO TO PROJECT</h1>
+          <div class="left piece">
+            <a href="http://138.68.60.37:8084/#!/">
+              <div id="todoapp" class="projimg">
+                <div class="projcover rockcov">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
               </div>
-            </div>
-          </a>
-          <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
+            </a>
+          </div>
+          <div class="right piece">
+            <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+          </div>
         </div>
         <div id="drumkitpro" class="project item">
-          <a href="https://sbrycebarker.github.io/DRUM-KIT/">
-            <div id="drumkit" class="projimg">
-              <!-- <img src="./styles/imgs/metal_music.png"> -->
-              <div class="projcover">
-                <h1 class="go2">GO TO PROJECT</h1>
+          <div class="left price">
+            <a href="https://sbrycebarker.github.io/DRUM-KIT/">
+              <div id="drumkit" class="projimg">
+                <div class="projcover">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+          </div>
         </div>
         <div id="clockpro" class="project item">
-          <a href="https://sbrycebarker.github.io/CLOCK/">
-            <div id="clock" class="projimg">
-              <!-- <img src="./styles/imgs/metal_music.png"> -->
-              <div class="projcover">
-                <h1 class="go2">GO TO PROJECT</h1>
+          <div class="left piece">
+            <a href="https://sbrycebarker.github.io/CLOCK/">
+              <div id="clock" class="projimg">
+                <div class="projcover">
+                  <h1 class="go2">GO TO PROJECT</h1>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+          </div>
         </div>
         <div id="performpro" class="project item">
-          <a href="http://138.68.60.37:8085/#!/">
-            <div id="perform" class="projimg">
-              <!-- <img src="./styles/imgs/metal_music.png"> -->
-              <div class="projcover">
-                <h1 class="go2">In Progress</h1>
+          <div class="left piece">
+            <a href="http://138.68.60.37:8085/#!/">
+              <div id="perform" class="projimg">
+                <div class="projcover">
+                  <h1 class="go2">In Progress</h1>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <div class="right piece">
           <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/">Barker Performance</a></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+          </div>
         </div>
       </div>
     </div>
