--- a/styles/styles.css
+++ b/styles/styles.css
@@ -455,7 +455,6 @@
     height: 700px;
     display: flex !important;
     flex-direction: row;
-    /*background-color: black;*/
     opacity: .9;
     color: black;
     position: relative;
@@ -477,8 +476,8 @@
   }
 
   .projimg {
-    height: 600px;
-    width: 800px;
+    height: 90%;
+    /* width: 90%; */
     margin: 25px auto;
     background-size: 100%;
     background: cover;
@@ -515,6 +514,12 @@
     text-align: center;
   }
 
+  p {
+    font-size: 2.5rem;
+    margin: auto 15px;
+    width: 90%;
+  }
+
   .piece {
     margin: auto;
   }
@@ -527,9 +532,6 @@
     border-radius: 0 15px 0 0;
   }*/
 
-  .lrd {
-    display: inline-block;
-  }
 
   .projcover h1 {
     height: 100px;
