--- a/views/home.html
+++ b/views/home.html
@@ -60,7 +60,8 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>A simple angular app accessing <a href="http://www.swapi.com">www.swapi.com</a> and google weather.
+              Jquery animations, angular-ui-router also used. Built as a first project for Dev Mountain </p>
           </div>
         </div>
         <div id="subpro" class="project item">
@@ -75,7 +76,8 @@
         </div>
         <div class="right piece">
             <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>A partial clone of the Subaru.com website. Built with Angularjs, Nodejs, Express,
+            MongoDb, Gulp and Sass. Select a car, add accessories and "checkout"</p>
         </div>
         </div>
         <div id="rockpro" class="project item">
@@ -90,7 +92,9 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>An app built as a final/group project at Dev Mountain. This project uses Angularjs, Node, Express, ElephantSql, Auth0 and
+            I hosted on Digital Ocean. It uses multiple APIs to search for venues or bands. You can login and add favorites to track
+          later.</p>
           </div>
         </div>
         <div id="todopro" class="project item">
@@ -105,7 +109,8 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>A simple to do list made to apply knowledge of CRUD operations. Create a task with time stamps
+            change or delete them. Pagenation done with Bootstrap</p>
           </div>
         </div>
         <div id="drumkitpro" class="project item">
@@ -120,7 +125,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Drum Kit</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>A drumkit built watching 30Daysofjavascript. Click the buttons for drum noises and visuals</p>
           </div>
         </div>
         <div id="clockpro" class="project item">
@@ -135,7 +140,7 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/DRUM-KIT/">Clock</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>A clock made watching 30Daysofjavascript to strengthen javascript skills. Tells the time!</p>
           </div>
         </div>
         <div id="performpro" class="project item">
@@ -150,7 +155,8 @@
           </div>
           <div class="right piece">
           <h1 class="pronam"><a href="http://138.68.60.37:8085/#!/">Barker Performance</a></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt iusto ipsam ducimus?</p>
+            <p>An E-commerce site currently being worked on. Using the MEAN stack. Design is based on a template from
+            Wix. Uses sliders, Javascript, and jQuery effects</p>
           </div>
         </div>
       </div>
