--- a/views/home.html
+++ b/views/home.html
@@ -60,7 +60,7 @@
           </div>
           <div class="right piece">
             <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
-            <p>A simple angular app accessing <a href="http://www.swapi.com">www.swapi.com</a> and google weather.
+            <p>A simple angular app accessing <a href="http://swapi.co">swapi.co</a> and google weather.
               Jquery animations, angular-ui-router also used. Built as a first project for Dev Mountain </p>
           </div>
         </div>
